# cargo-local-registry-compare

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
